# magnetite

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
magnetite_bin/: Cargo.toml
magnetite_bin/src/: app_config.rs  main.rs
magnetite_cache/: Cargo.toml
magnetite_cache/src/: actor.rs  error.rs  lib.rs  storage.rs  store.rs
magnetite_cache/src/store/: dashmap.rs  redis.rs
magnetite_core/: Cargo.toml
magnetite_core/src/: cache.rs  config.rs  error.rs  lib.rs  middleware.rs  sites.rs  state.rs  util.rs  xpath.rs
magnetite_core/src/sites/: gcores.rs
magnetite_core/src/sites/weibo/: user.rs
src/: cache.rs  error.rs  http.rs  lib.rs  main.rs  middleware.rs  services.rs  sites.rs  util.rs
src/cache/: lru_cache.rs
src/sites/: gcores.rs
