[package]
name = "magnetite_rs"
version = "0.1.0"
authors = ["simoin <lfzeng34@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

serde = {version="1", features = ["derive"]}
#crossbeam-utils = "0.8.5"

futures = "0.3.5"
actix-service = "1.0"
actix-web = "3.3.2"

lazy_static = "1.4.0"
libxml = "0.2.17"

reqwest = { version = "0.10", features = ["cookies"] }
ajson = "0.2.3"

chrono = "0.4.15"
rss = {version = "1.10.0", features = ["with-serde"] }

actix-storage = { version = "0.2.0", features=["serde-json"] }
actix-storage-dashmap = { version = "0.2.0", features=["actor"] }
#dashmap = { version = "4.0.2", optional = true }
redis = { version = "0.17.0", optional = true, features=["r2d2"] }

[features]
default = ["memory"]

memory = []
redis-cache = ["redis"]