[package]
name = "magnetite_bin"
version = "0.1.0"
authors = ["simoin <lfzeng34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-web = "4.0.0-beta.6"

magnetite_core = { path = "../magnetite_core" }
magnetite_cache = { path = "../magnetite_cache" }

config = { version = "0.11.0", default-features = false, features = ["toml"] }

serde = "1.0"

[features]
default = ["memory"]

memory = []
redis = []