[package]
name = "magnetite_bin"
version = "0.1.0"
authors = ["simoin <lfzeng34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-web = "4.0.0-beta.6"

magnetite_core = { path = "../magnetite_core" }

config = { version = "0.11.0", default-features = false, features = ["toml"] }
structopt = "0.3.21"
directories = "3.0.2"

simple_logger = "1.11.0"

serde = "1.0"
toml = "0.5.8"

[features]
default = ["redis"]

memory = []
redis = []