[package]
name = "magnetite_cache"
version = "0.1.0"
authors = ["simoin <lfzeng34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.11" }
actix-web = { version = "4.0.0-beta.6", default-features = false }

async-trait = "0.1"

log = "0.4"

thiserror = "1"
chrono = "0.4"
dashmap = "4.0.0"
redis = "0.20.1"

serde = "1.0"
serde_json = "1.0"