[package]
name = "magnetite_core"
version = "0.1.0"
authors = ["simoin <lfzeng34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = { version = "0.4", features = ["std"] }

lazy_static = "1.4.0"

futures = "0.3.5"
actix = "0.11"
actix-web = "4.0.0-beta.6"

magnetite_cache = { path = "../magnetite_cache" }

reqwest = { version = "0.11", features = ["cookies"] }
libxml = "0.3"

chrono = "0.4.15"
serde = { version = "1", features = ["derive"] }
ajson = "0.2.4"
rss = { version = "1.10.0", features = ["with-serde"] }
dashmap = "4.0.0"
